<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".ui.auth.SignUpActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_16dp">

        <ImageView
            android:id="@+id/image_view_logo"
            android:layout_width="@dimen/logo_size"
            android:layout_height="@dimen/logo_size"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="45dp"
            android:background="@drawable/ic_app_logo"
            android:contentDescription="@string/logo_description_text" />

        <LinearLayout
            android:id="@+id/linear_layout_three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/image_view_logo"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/logo_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/dark_blue"
                app:fontFamily="cursive" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/mvvm_logo_text"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                android:textColor="@color/darking_blue"
                android:textStyle="bold"
                android:typeface="monospace"
                app:fontFamily="casual" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_layout_four"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linear_layout_three"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="18dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="12dp"
                android:background="@drawable/edit_text_round_gray_background"
                android:drawableLeft="@drawable/ic_name"
                android:drawablePadding="@dimen/padding_16dp"
                android:hint="@string/sign_up_name"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                android:drawableStart="@drawable/ic_name"
                android:importantForAutofill="no" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="12dp"
                android:background="@drawable/edit_text_round_gray_background"
                android:drawableLeft="@drawable/ic_email"
                android:drawablePadding="@dimen/padding_16dp"
                android:hint="@string/login_hint"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                android:drawableStart="@drawable/ic_email" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="12dp"
                android:background="@drawable/edit_text_round_gray_background"
                android:drawableLeft="@drawable/ic_lock"
                android:drawablePadding="@dimen/padding_16dp"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:padding="12dp"
                android:drawableStart="@drawable/ic_lock" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="12dp"
                android:background="@drawable/edit_text_round_gray_background"
                android:drawableLeft="@drawable/ic_lock"
                android:drawablePadding="@dimen/padding_16dp"
                android:hint="@string/confirm_password_hint"
                android:inputType="textPassword"
                android:padding="12dp"
                android:drawableStart="@drawable/ic_lock" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@string/forget_password_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorPrimaryDark" />

            <Button
                android:layout_width="@dimen/button_size"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/sign_in_text"
                android:textAllCaps="false" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/linear_layout_four"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:text="@string/sign_up_here_text"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorPrimary" />

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:visibility="invisible" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>