<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.infernal93.mvvmarchitectore.ui.auth.AuthViewModel" />
    </data>


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/root_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray"
        tools:context=".ui.auth.LoginActivity">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_16dp">

            <ImageView
                android:id="@+id/image_view_logo"
                android:layout_width="@dimen/logo_size"
                android:layout_height="@dimen/logo_size"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="75dp"
                android:background="@drawable/ic_app_logo"
                android:contentDescription="@string/logo_description_text" />

            <LinearLayout
                android:id="@+id/linear_layout_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/image_view_logo"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/logo_text"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/dark_blue"
                    app:fontFamily="cursive" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/mvvm_logo_text"
                    android:textAllCaps="false"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                    android:textColor="@color/darking_blue"
                    android:textStyle="bold"
                    android:typeface="monospace"
                    app:fontFamily="casual" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_layout_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linear_layout_one"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="18dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/edit_text_round_gray_background"
                    android:drawableStart="@drawable/ic_email"
                    android:drawableLeft="@drawable/ic_email"
                    android:drawablePadding="16dp"
                    android:hint="@string/login_hint"
                    android:inputType="textEmailAddress"
                    android:padding="12dp"
                    android:text="@={viewmodel.email}" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/edit_text_round_gray_background"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawableLeft="@drawable/ic_lock"
                    android:drawablePadding="@dimen/padding_16dp"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:padding="12dp"
                    android:text="@={viewmodel.password}" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:text="@string/forget_password"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/colorPrimaryDark" />

                <Button
                    android:layout_width="@dimen/button_size"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:onClick="@{viewmodel::testLoginButtonClick}"
                    android:text="@string/sign_in_btn_text"
                    android:textAllCaps="false" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/linear_layout_two"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp"
                android:text="@string/sign_up_here_text"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/colorPrimary" />

        </RelativeLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:visibility="invisible" />


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>